<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_form_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/titleInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/locationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_form_location"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/locationInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />

        <TextView
            android:id="@+id/startDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_form_startdate"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <DatePicker
            android:id="@+id/startDateInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false" />

        <TextView
            android:id="@+id/startTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_form_start"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TimePicker
            android:id="@+id/startTimeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/endDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_form_enddate"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <DatePicker
            android:id="@+id/endDateInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false" />

        <TextView
            android:id="@+id/endTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_form_end"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TimePicker
            android:id="@+id/endTimeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detailsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_form_details"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/detailsInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="goBack"
                android:text="@string/cancelbutton" />

            <Button
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addEvent"
                android:text="@string/addbutton" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>